Remove overflow (we need to show the datepicker correctly)

--- a/assets/sass/layout/_layout.scss
+++ b/assets/sass/layout/_layout.scss
@@ -57,7 +57,7 @@
 
 	.site-sidebar--right-sidebar,
 	.site-sidebar--left-sidebar {
-		overflow: hidden;
+		// overflow: hidden;
 		width: $size__site__sidebar;
 	}
 
